Get number of heroes from setup, send to result activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,17 @@
             android:label="@string/title_activity_setup" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+                android:name=".ResultActivity"
+                android:label="@string/title_activity_result"
+                android:parentActivityName=".SetupActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="net.aehdev.randomsentinels.SetupActivity"/>
         </activity>
     </application>
 
