--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,25 +19,23 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.aehdev.randomsentinels" >
+          package="net.aehdev.randomsentinels">
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:theme="@style/AppTheme"
+            android:label="@string/app_name">
         <activity
-            android:name=".SetupActivity"
-            android:label="@string/title_activity_setup" >
+                android:name=".SetupActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
                 android:name=".ResultActivity"
-                android:label="@string/title_activity_result"
                 android:parentActivityName=".SetupActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
