--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.3'
 
     compile 'uk.co.chrisjenx:calligraphy:1.2.0'
+    //noinspection GradleDynamicVersion
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 }
