--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014 Adam Howard <aeh AT aehdev DOT net>.
+ * Copyright (c) 2015 Adam Howard <aeh AT aehdev DOT net>.
  *
  * This file is part of Random Sentinels.
  *
@@ -28,6 +28,10 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+
     defaultConfig {
         applicationId "net.aehdev.randomsentinels"
         minSdkVersion 11
@@ -50,6 +54,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.3'
 
     compile 'uk.co.chrisjenx:calligraphy:1.2.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
     //noinspection GradleDynamicVersion
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 }
